mule-user-guide/v/3.3/deploying-mule-as-a-service-to-tomcat.adoc
= 将Mule作为服务部署到Tomcat

本页面描述了两个使您能够在Tomcat Web服务器上部署Mule应用程序的活动：

* 将Mule作为服务安装在Apache Tomcat服务器上
* 设置您的Mule应用程序进行热部署

有关热部署Mule应用程序的更多信息，请参阅 link:/mule-user-guide/v/3.7/application-server-based-hot-deployment[基于应用服务器的热部署]。

== 在Tomcat上安装Mule

.  http://tomcat.apache.org/[下载]并按照Apache的安装说明安装Apache Tomcat。
. 在系统的Tomcat主目录中，将以下行添加到`conf/server.xml`文件中：
+
`<Listener className="org.mule.config.builders.MuleXmlBuilderContextListener" />`

. 如果您尚未这样做，请在本地系统上创建一个Tomcat主目录。
. 将Mule `lib`文件夹及其所有子目录 -  *except* `/boot`的内容复制到您的Tomcat主目录中。`mule-libs/`。你不需要压扁目录。
. 将`mule-module-tomcat-<version>.jar`文件复制到Tomcat主目录中的`mule-lib/mule/`目录。
. 将以下库从您的Mule `lib/boot/`目录复制到您的Tomcat `mule-libs/opt/`目录中：
+
* 公地-CLI-1.2.jar
* 七月到SLF4J-1.6.1.jar
* 的log4j-1.2.16.jar
* 骡模块-测井3.3.1.jar
* 包装-3.5.7.jar

. 在Tomcat `conf/catalina.properites`文件中，将以下内容添加到`common.loader`（以逗号开头，以将其与现有值分开）
+
`${catalina.home}/mule-libs/user/*.jar,${catalina.home}/mule-libs/mule/*.jar,${catalina.home}/mule-libs/opt/*.jar`

== 在Tomcat中部署Mule应用程序

. 将您的Mule应用程序的配置文件和自定义Java类打包到`.war`文件中（请参阅 link:/mule-user-guide/v/3.7/application-server-based-hot-deployment[基于应用服务器的热部署]）。
. 复制您的应用程序的`.war`文件，然后将其粘贴到Tomcat `/webapps`目录中。
.  Tomcat热部署应用程序。

如果需要更改Mule应用程序中的配置或Java文件，请修改Tomcat `/webapps`目录下展开的目录中的文件，然后触摸`web.xml`文件（例如，只需添加并删除文件中的空间然后保存它）。这些操作会触发Tomcat重新部署应用程序。

或者，您可以修改应用程序的源文件，将其重新打包为`.war`文件，然后将新`.war`文件放入`/webapps`目录以触发Tomcat重新部署应用程序。

== 另请参阅

* 了解如何在 link:/runtime-manager/cloudhub[CloudHub]中部署云中的Mule应用程序。
